src/objects/PSA_Revenue_Stage__c.object
<CustomObject>
    <description>The PSA Revenue Stage object will be accessed by the Invoice Application integration for updating project revenue information from Intacct’s rev rec process.</description>
    <fields>
        <fullName>PSA_Expense_Revenue_Amount__c</fullName>
        <description>The expense revenue amount to apply to the project, calculated in Intacct</description>
        <label>Expense Revenue Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_GW_Integration_Id__c</fullName>
        <description>Source Id used to uniquely identify the associated source system record</description>
        <label>GW Integration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Month_Ending__c</fullName>
        <description>End date of the month to which the revenue amount applies</description>
        <label>Month Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id (record name) of the project to update (e.g., “PR-1923”) with revenue information. This is used for lookup of the project</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PSA Revenue Stage</relationshipLabel>
        <relationshipName>PSA_Revenue_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Services_Revenue_Amount__c</fullName>
        <description>The services revenue amount to apply to the project, calculated in Intacct</description>
        <label>Services Revenue Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PSA Revenue Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Revenue Stage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Revenue Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>